kubernetes/apps/syncthing/service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - name: sync-tcp
      port: 22000
      targetPort: sync-tcp
      protocol: TCP
    - name: sync-quic
      port: 22000
      targetPort: sync-quic
      protocol: UDP
    - name: discovery
      port: 21027
      targetPort: discovery
      protocol: UDP
