kubernetes/apps/syncthing/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: syncthing-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pomerium
      ports:
        - port: http
          protocol: TCP
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - port: sync-tcp
          protocol: TCP
        - port: sync-quic
          protocol: UDP
        - port: discovery
          protocol: UDP
